--- a/no2.html
+++ b/no2.html
@@ -4,23 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ask Her Out</title>
+  <title>Ask Him</title>
 
   <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
   <div class="container">
-    <div class="tenor-gif-embed" data-postid="15195810" data-share-method="host" data-aspect-ratio="1"
+   <div class="tenor-gif-embed" data-postid="22049217" data-share-method="host" data-aspect-ratio="1" 
       data-width="100%">
-      <a href="https://tenor.com/view/couple-forgive-me-asking-for-forgiveness-begging-crying-gif-15195810">Couple
-        Forgive Me Sticker</a>from
-      <a href="https://tenor.com/search/couple-stickers">Couple Stickers</a>
+      <a href="https://tenor.com/view/tkthao219-bubududu-panda-gif-22049217">Tkthao219 Bubududu Sticker</a>from 
+      <a href="https://tenor.com/search/tkthao219-stickers">Tkthao219 Stickers</a>
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>Ek aur baar Soch lo! 😣</h1>
-    <p>kyu aisa kar rahi ho Plzzz Man jao😣</p>
+    <h1>hatt nai milega bola na ek baar😑</h1>
+    <p>pet dekh khudka itne chocopie h 6-6 huh</p>
 
     <div class="btn">
       <a href="yes.html">Yes</a>
