Update links and text in no1.html

--- a/no1.html
+++ b/no1.html
@@ -21,8 +21,8 @@ data-width="100%">
     <p>poora m khaa jaungii hehehe😤😋</p>
 
     <div class="btn">
-      <a href="yes.html">Yes</a>
-      <a href="no2.html">No</a>
+      <a href="yes.html">ok</a>
+      <a href="no2.html">MERII CHOCOPIEE DEEE</a>
     </div>
   </div>
 </body>
