--- a/no3.html
+++ b/no3.html
@@ -21,7 +21,7 @@
     <p>fineeeeeee</p>
 
     <div class="btn">
-      <a href="yes.html">Yes</a>
+      <a href="yes.html">HAAAAAA KRUNGAAA</a>
       <a href="#" id="move-random">No</a>
     </div>
   </div>
