--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <h1>kit kat khaani hai?</h1>
-    <p>Chocopie toh m khaungi saari par hehe</p>
+    <p>m khaungi saari par hehe</p>
 
     <div class="btn">
-      <a href="yes.html">no</a>
-      <a href="no1.html">yessssssssss</a>
+      <a href="yes.html">ok</a>
+      <a href="no1.html">NOOOOOOOOOOOOOOOOOOO ITS MINEEEEE</a>
     </div>
   </div>
 </body>
