--- a/no1.html
+++ b/no1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ask Him</title>
+  <title>KITKAT</title>
 
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -22,7 +22,7 @@ data-width="100%">
 
     <div class="btn">
       <a href="yes.html">ok</a>
-      <a href="no2.html">MERII CHOCOPIEE DEEE</a>
+      <a href="no2.html">MERII KITKAT DEEE</a>
     </div>
   </div>
 </body>
