Change title and update text in no2.html

--- a/no2.html
+++ b/no2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ask Him</title>
+  <title>KITKAT</title>
 
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -19,11 +19,11 @@
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
     <h1>hatt nai milega bola na ek baar😑</h1>
-    <p>pet dekh khudka itne chocopie h 6-6 huh</p>
+    <p>TU BHOT KIT KAT KHAATI</p>
 
     <div class="btn">
       <a href="yes.html">Yes U ARE RIGHT (ofc i am)</a>
-      <a href="no3.html">KOI 6 CHOCIPIE NAI H TU YE DE IDK</a>
+      <a href="no3.html">mujhe frk nai padta TU YE DE IDK</a>
     </div>
   </div>
 </body>
