--- a/no3.html
+++ b/no3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ask Him</title>
+  <title>KITKAT</title>
 
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -17,7 +17,7 @@
     </div>
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-    <h1>pet dard krega mera huh😒</h1>
+    <h1>pet dard kregi ab mera huh😒</h1>
     <p>fineeeeeee</p>
 
     <div class="btn">
